@@ -28,4 +28,9 @@
   <!-- query parser without final NAME field lead to NPE during query parser initialization-->
   <queryParser name="fail" class="solr.search.LuceneQParserPlugin"/>
 
+  <!-- Un-ordered complex phrase query parser Same behaviour as Lucene's Sloppy PhraseQuery where slop is greater than 0 -->
+  <queryParser name="unorderedcomplexphrase" class="solr.search.ComplexPhraseQParserPlugin">
+    <bool name="inOrder">false</bool>
+  </queryParser>
+
 </config>
